<?xml version="1.0"?>
<package format="2">
  <name>haption</name>
  <version>0.0.0</version>
  <description>The haption package</description>
  <maintainer email="jl17783@bristol.ac.uk">joe louca</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <depend>moveit_commander</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
